--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,8 @@ edition = "2021"
 [dependencies]
 rosrust = "0.9"
 rosrust_msg = "0.1"
-env_logger = "0.9.0"
+env_logger = "0.10.0"
 crossterm = { version = "0.27.0", features = ["event-stream"] }
+futures = "0.3"
+futures-timer = "3.0"
+async-std = "1.12"
